spiceparser/eqn.h

typedef enum itemop_e
{
  OPeolist,
  OPeol_const,  /* special terminator, for constant (reduced memory usage) */
  OPeol_valp,  /* special terminator, for indirection (float *) */
  OPeol_qty,   /* for simplified decoding of eol */

  OPlit,
  OPlitm,
  OPlitv,
  OPlitvm,

  OPval,
  OPvalm,
  OPadd,
  OPsub,

  OPmul,
  OPdiv,
  OPexp,
  OPopen,

  OPclose
}itemop_t;
#define OP_ISEV(a)   (((a)>OPeolist) && ((a) < OPeol_qty) )
#define OP_ISV(a)    (((a)>=OPlit) && ((a) <= OPvalm))
#define OP_ISEND(a)   ( ((a)<=OPeol_qty) ) 
#define OP_ISANYV(a)  (OP_ISV(a) || OP_ISEV(a))
#define eqn_litref_INIT -1
typedef struct eqntoken_st
{
  itemop_t op;
  union lit_val_un
  {
    eqntokenlit_t lit;
    eqntokenval_t val;
    eqntokenpval_t pval;
  }z;
}eqntoken_t;
#define EQN_DELIM '\''
#define MAXEQNSTACK 512
#define MAXSTACK 512
typedef struct eqn_st
{
#ifdef NO_EQUATIONS
  float val;
#else
  eqntoken_t *eqn;  
#endif
}eqn_t;