spiceparser/netlist.h

struct spice_st;
#define EXTRACT_MAGIC 0x55315662
#define SPICE_MAGIC 0x435acde0
typedef union dev_input_un
{
  void *p;
  struct m_st *spice_fet;
  struct c_st *spice_cap;
  void *spice_res;
  void *extract_fet;
  void *extract_cap;
  void *extract_res;
}dev_input_t;
/* compact netlist:

 device is: object with k terminals (k small)
 netlist is connection of devices

 share common terminal pointer.

*/


#define TERMPTR_BITS_DEVI 24
#define TERMPTR_BITS_TERMI 3
#define TERMPTR_BITS_DEVT  4
typedef struct termptr_st
{
  unsigned devi:  TERMPTR_BITS_DEVI;
  unsigned nonnull: 1;
  unsigned termi: TERMPTR_BITS_TERMI;
  unsigned devt:  TERMPTR_BITS_DEVT;
}termptr_t;
#define TERMPTR_MAX_DEVI  ((1<<TERMPTR_BITS_DEVI)-1)
#define TERMPTR_MAX_TERMI ((1<<TERMPTR_BITS_TERMI)-1)
#define TERMPTR_MAX_DEVT  ((1<<TERMPTR_BITS_DEVT)-1)
#define netlist_termptr_isnull(t)  (t.nonnull==0)
#define NETLIST_OFFSET_PARENT(e)  (0)
#define NETLIST_OFFSET_TERMS(e)   (sizeof(dev_input_t) + NETLIST_OFFSET_PARENT(e) )
#define NETLIST_OFFSET_VALS(e)  (NETLIST_OFFSET_TERMS((e)) + ((e).qterms*sizeof(termptr_t)))
#define NETLIST_OFFSET_REST(e)     ( NETLIST_OFFSET_VALS(e) + (sizeof(eqn_t)*((e).qvals)))
#define NETLIST_OFFSET_OTHER(e)    ( NETLIST_OFFSET_REST(e) + (e).qother )
#define NETLIST_E_QTERMS(e)  ((e)->qterms)
#define NETLIST_QTERMS(nl,t)  ((nl)->e[t].qterms)
#define NETLIST_E_QVALS(e)   ((e)->qvals)
#define NETLIST_QVALS(nl,t)   ((nl)->e[t].qvals)
#define DEVT_NODE 0 /* all netlists have type 0 as a node */
#define DEVT_NODE_TERMS 2
/********* netlist_spice.c *********/

struct spice_st *spice_new(scanner_t *scan);
void     spice_release(struct spice_st *sp);
void     spice_debug(void *dbg_fp, struct spice_st *sp);