spiceparser/spiceparser.py


spice_t = struct_spice_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_spice.h: 272

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_spice.h: 279
if hasattr(_libs['spiceparser'], 'spice_find_subckt'):
    spice_find_subckt = _libs['spiceparser'].spice_find_subckt
    spice_find_subckt.argtypes = [POINTER(subckt_t), String]
    spice_find_subckt.restype = POINTER(subckt_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_spice.h: 280
if hasattr(_libs['spiceparser'], 'spice_new'):
    spice_new = _libs['spiceparser'].spice_new
    spice_new.argtypes = [POINTER(scanner_t)]
    spice_new.restype = POINTER(spice_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_spice.h: 281
if hasattr(_libs['spiceparser'], 'spice_release'):
    spice_release = _libs['spiceparser'].spice_release
    spice_release.argtypes = [POINTER(spice_t)]
    spice_release.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_spice.h: 282
if hasattr(_libs['spiceparser'], 'spice_debug'):
    spice_debug = _libs['spiceparser'].spice_debug
    spice_debug.argtypes = [POINTER(None), POINTER(spice_t)]
    spice_debug.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_spice.h: 283
if hasattr(_libs['spiceparser'], 'spice_list_subckt'):
    spice_list_subckt = _libs['spiceparser'].spice_list_subckt
    spice_list_subckt.argtypes = [POINTER(subckt_t)]
    spice_list_subckt.restype = list_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\bitlist.h: 37
try:
    SCAN_FORWARD = 1
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\bitlist.h: 38
try:
    SCAN_REVERSE = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\bitlist.h: 39
try:
    SCAN_SET = 2
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\bitlist.h: 40
try:
    SCAN_CLEAR = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\debug.h: 49
def DEBUG_CMDLINE(c, v, s):
    return (cmdline_read_rc (pointer(c), pointer(v), s))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 51
try:
    LIST_MODECHUNK = 4095
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 52
try:
    LIST_DEFMODE = 16
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 53
try:
    LIST_EXPMODE = 8191
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 54
try:
    LIST_FIXEDMODE = 8192
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 55
try:
    LIST_UNITMODE = 1
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 56
try:
    LIST_USERFLAG1 = 65536
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 57
try:
    LIST_USERFLAG2 = 131072
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 58
try:
    LIST_USERMASK = 16711680
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 59
def list_getuser(l):
    return ((((l.contents.mode).value) & LIST_USERMASK) >> 16)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 68
def list_qty(l):
    return (l.contents.q)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/list.h: 69
def list_sizeof(l):
    return (l.contents.s)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 61
def hash_bin2user(p):
    return (p + sizeof(hashbin_t))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 62
def hash_user2bin(p):
    return (p - sizeof(hashbin_t))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/hash.h: 64
def hash_malloc(h, s):
    return (hash_alloc (h, (malloc (s))))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 99
def OP_ISEV(a):
    return ((a > OPeolist) and (a < OPeol_qty))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 100
def OP_ISV(a):
    return ((a >= OPlit) and (a <= OPvalm))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 101
def OP_ISEND(a):
    return (a <= OPeol_qty)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 102
def OP_ISANYV(a):
    return ((OP_ISV (a)) or (OP_ISEV (a)))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 106
try:
    eqn_litref_INIT = (-1)
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 138
try:
    EQN_DELIM = "\\'"
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 140
try:
    MAXEQNSTACK = 512
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\eqn.h: 161
try:
    MAXSTACK = 512
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 93
def OP_ISEV(a):
    return ((a > OPeolist) and (a < OPeol_qty))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 94
def OP_ISV(a):
    return ((a >= OPlit) and (a <= OPvalm))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 95
def OP_ISEND(a):
    return (a <= OPeol_qty)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 96
def OP_ISANYV(a):
    return ((OP_ISV (a)) or (OP_ISEV (a)))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 128
try:
    EQN_DELIM = "\\'"
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 130
try:
    MAXEQNSTACK = 512
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\equations.h: 146
try:
    MAXSTACK = 512
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\list_search.h: 55
def list_search(lp):
    return pointer((lp.contents.list))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\list_search.h: 60
def list_search_add(a, b):
    return (list_add ((list_search (a)), b))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\list_search.h: 61
def list_search_qty(a):
    return (list_qty ((list_search (a))))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\list_search.h: 62
def list_search_index(a, b):
    return (list_index ((list_search (a)), b))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\list_search.h: 63
def list_search_reset(a):
    return (list_reset ((list_search (a))))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\memory.h: 28
try:
    MEMORY_CHUNKSIZE = (1024 * 16)
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\memory.h: 29
try:
    MEMORY_THRESHOLD = 16
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\memory.h: 39
try:
    MEMORY_MAGIC = 903848725
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/scanner.h: 123
try:
    PARSE_CASE_TOLOWER = 1
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/scanner.h: 124
try:
    PARSE_CASE_TOUPPER = 2
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\/scanner.h: 125
try:
    PARSE_NOCASECVT = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 55
try:
    EXTRACT_MAGIC = 1429296738
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 56
try:
    SPICE_MAGIC = 1130024416
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 101
try:
    TERMPTR_BITS_DEVI = 24
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 102
try:
    TERMPTR_BITS_TERMI = 3
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 103
try:
    TERMPTR_BITS_DEVT = 4
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 113
try:
    TERMPTR_MAX_DEVI = ((1 << TERMPTR_BITS_DEVI) - 1)
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 114
try:
    TERMPTR_MAX_TERMI = ((1 << TERMPTR_BITS_TERMI) - 1)
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 115
try:
    TERMPTR_MAX_DEVT = ((1 << TERMPTR_BITS_DEVT) - 1)
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 116
def netlist_termptr_isnull(t):
    return (((t.nonnull).value) == 0)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 151
def NETLIST_OFFSET_PARENT(e):
    return 0

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 155
def NETLIST_OFFSET_TERMS(e):
    return (sizeof(dev_input_t) + ((NETLIST_OFFSET_PARENT (e)).value))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 161
def NETLIST_OFFSET_VALS(e):
    return (((NETLIST_OFFSET_TERMS (e)).value) + (((e.qterms).value) * sizeof(termptr_t)))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 166
def NETLIST_OFFSET_REST(e):
    return (((NETLIST_OFFSET_VALS (e)).value) + (sizeof(eqn_t) * ((e.qvals).value)))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 169
def NETLIST_OFFSET_OTHER(e):
    return (((NETLIST_OFFSET_REST (e)).value) + ((e.qother).value))

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 172
def NETLIST_E_QTERMS(e):
    return (e.contents.qterms)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 173
def NETLIST_QTERMS(nl, t):
    return (((nl.contents.e) [t]).qterms)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 174
def NETLIST_E_QVALS(e):
    return (e.contents.qvals)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 175
def NETLIST_QVALS(nl, t):
    return (((nl.contents.e) [t]).qvals)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 177
try:
    DEVT_NODE = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 179
try:
    DEVT_NODE_TERMS = 2
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 30
try:
    DEVNODE_HEAD = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 31
try:
    DEVNODE_TAIL = 1
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 33
try:
    DEVFET_S = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 34
try:
    DEVFET_D = 1
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 35
try:
    DEVFET_G = 2
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 36
try:
    DEVFET_B = 3
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 37
try:
    DEVFET_w = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 38
try:
    DEVFET_l = 1
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 39
try:
    DEVFET_as = 2
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 40
try:
    DEVFET_ad = 3
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 41
try:
    DEVFET_ps = 4
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 42
try:
    DEVFET_pd = 5
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 43
try:
    DEVFET_V = 6
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 45
try:
    DEV2TERM_P = 1
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 46
try:
    DEV2TERM_N = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 48
try:
    DEVCAP_c = 0
except:
    pass

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 49
try:
    DEVCAP_V = 1
except:
    pass
